Fix JBang JabKit launcher