@@ -3,6 +3,7 @@
 //DESCRIPTION jabkit - mange BibTeX files using JabRef
 
 //JAVA 24
+//RUNTIME_OPTIONS --enable-native-access=ALL-UNNAMED
 
 //SOURCES ../jabkit/src/main/java/org/jabref/cli/ArgumentProcessor.java
 //SOURCES ../jabkit/src/main/java/org/jabref/cli/CheckConsistency.java
@@ -16,7 +17,7 @@
 //SOURCES ../jabkit/src/main/java/org/jabref/cli/Preferences.java
 //SOURCES ../jabkit/src/main/java/org/jabref/cli/Search.java
 //SOURCES ../jabkit/src/main/java/org/jabref/JabKit.java
-//FILES ../jabkit/src/main/resources/tinylog.properties
+//FILES tinylog.properties=../jabkit/src/main/resources/tinylog.properties
 
 //REPOS mavencentral,mavencentralsnapshots=https://central.sonatype.com/repository/maven-snapshots/,s01oss=https://s01.oss.sonatype.org/content/repositories/snapshots/,oss=https://oss.sonatype.org/content/repositories,jitpack=https://jitpack.io,oss2=https://oss.sonatype.org/content/groups/public,ossrh=https://oss.sonatype.org/content/repositories/snapshots
 
